zerocopy-derive/tests/ui-nightly/enum_from_bytes_u8_too_few.stderr
error: FromBytes only supported on repr(u8) enum with 256 variants
   --> tests/ui-nightly/enum_from_bytes_u8_too_few.rs:15:1
    |
15  | / #[repr(u8)]
16  | | enum Foo {
17  | |     Variant0,
18  | |     Variant1,
...   |
271 | |     Variant254,
272 | | }
    | |_^

error[E0277]: the trait bound `Foo: FromBytes` is not satisfied
  --> tests/ui-nightly/enum_from_bytes_u8_too_few.rs:14:10
   |
14 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `Foo`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI8
             AtomicIsize
             AtomicU16
             AtomicU32
           and $N others
note: required by a bound in `assert_is_from_bytes`
  --> tests/ui-nightly/enum_from_bytes_u8_too_few.rs:14:10
   |
14 | #[derive(FromBytes)]
   |          ^^^^^^^^^ required by this bound in `assert_is_from_bytes`
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
